# Bonzomatic

./: .gitignore  .travis.yml  Bonzomatic_W32_DX11.sln  Bonzomatic_W32_DX11.vcxproj  Bonzomatic_W32_DX11.vcxproj.filters  Bonzomatic_W32_DX9.sln  Bonzomatic_W32_DX9.vcxproj  Bonzomatic_W32_DX9.vcxproj.filters  Bonzomatic_W32_SDL.sln  Bonzomatic_W32_SDL.vcxproj  Bonzomatic_W32_SDL.vcxproj.filters  CMakeLists.txt  Clipboard.h  LICENSE  Makefile  Platform.cpp  README  README.md  Renderer.h  ShaderEditor.cpp  ShaderEditor.h  appveyor.yml  cmake_all.bat  config.json  fft.h  libbass.dylib  main.cpp
.github/workflows/: build_release.yml  main.yml
cmake/: FindSDL2.cmake
data/macosx/: MacOSXBundleInfo.plist.in  entitlements.plist  icon.icns
data/unix/: bonzomatic.desktop
data/windows/: SetupDialog.aps  SetupDialog.rc  resource.h
package/common/: config.json  file_id.diz
platform_osx/: Clipboard.cpp
platform_sdl/: MIDI.cpp  Platform.cpp  Renderer.cpp
platform_w32_common/: Clipboard.cpp  FFT.cpp  MIDI.cpp  SetupDialog.cpp  SetupDialog.rc  ShaderEditor.cpp  Timer.cpp  resource.h
platform_w32_dx11/: Renderer.cpp
platform_w32_dx9/: Renderer.cpp
platform_x11/: Clipboard.cpp  FFT.cpp  MIDI.cpp  Platform_DynamicLoad.cpp  SetupDialog.cpp  Timer.cpp
src/: Capture.h  Clipboard.h  CommandLineArgs.h  Config.cpp  Config.h  FFT.h  MIDI.h  Misc.h  Network.h  Platform.cpp  Renderer.h  SetupDialog.h  ShaderEditor.cpp  ShaderEditor.h  Timer.h  TouchBar.h  Utils.h  main.cpp
src/capturing/: Capture_Dummy.cpp  Capture_NDI.cpp
src/platform_common/: Config.cpp  FFT.cpp  MIDIDummy.cpp  Network.cpp  Utils.cpp
src/platform_glfw/: Renderer.cpp
src/platform_linux/: Config.cpp
src/platform_osx/: Clipboard.cpp  Misc.cpp  Misc.mm  SetupDialog.cpp  TouchBar.mm
src/platform_sdl/: Renderer.cpp
src/platform_w32_common/: Clipboard.cpp  FFT.cpp  MIDI.cpp  Misc.cpp  Platform_DynamicLoad.cpp  SetupDialog.cpp  Timer.cpp
src/platform_w32_dx11/: Renderer.cpp
src/platform_w32_dx9/: Renderer.cpp
src/platform_x11/: Clipboard.cpp  MIDI.cpp  Misc.cpp  Platform_DynamicLoad.cpp  SetupDialog.cpp  Timer.cpp
